# claude-chatbot

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  modal_app.py  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
api/: chat.ts
backend/: ARCHITECTURE_DIAGRAM.md  BUSINESS_CONCEPT_STRUCTURE.md  DDD_ARCHITECTURE.md  modal_app.py  pyproject.toml  test_structure.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routers/: __init__.py  chat.py  health.py  sessions.py
backend/app/application/: __init__.py
backend/app/application/chat/: __init__.py  dto.py  send_message.py
backend/app/application/session/: __init__.py  create_session.py  delete_session.py  dto.py  get_session.py  list_sessions.py  update_session.py
backend/app/domain/: __init__.py
backend/app/domain/chat/: __init__.py  entities.py  ports.py  service.py
backend/app/domain/session/: __init__.py  entities.py  ports.py  service.py
backend/app/harness/: __init__.py  container.py  testing.py
backend/app/harness/evaluation/: __init__.py  loader.py  metrics.py  models.py  runner.py
backend/app/infrastructure/: __init__.py  database.py
backend/app/infrastructure/chat/: __init__.py  bedrock_adapter.py
backend/app/infrastructure/session/: __init__.py  document.py  mapper.py  mongo_adapter.py
backend/tests/: test_evaluation.py  test_example.py
backend/tests/eval_suites/: basic_qa.json
public/: index.html
src/: chat.ts  (+1 more)
(+54 files in other folders)
